--- a/noticias_app/templates/noticias_app/noticias.html
+++ b/noticias_app/templates/noticias_app/noticias.html
@@ -43,6 +43,12 @@
       {{ form.as_p }}
       <button type="submit">Buscar</button>
   </form>
+  <label for="idioma">Seleccionar Idioma:</label>
+  <select id="idioma" name="idioma">
+    <option value="es">Español</option>
+    <option value="en">English</option>
+    <!-- Agrega más opciones según los idiomas que necesites -->
+  </select>
 
   <hr>
 
